[WIP] Ajout modifications pour chacun des modèles UTILISE/UnCRtainTS

--- a/dataloader_CIRCA/envs/cloud_reconstruction.yml
+++ b/dataloader_CIRCA/envs/cloud_reconstruction.yml
@@ -28,6 +28,8 @@ dependencies:
   - ipykernel
   - jupyter
   - ipywidgets
+  - kornia
+  - omegaconf
   - pip:
     - torchgeometry==0.1.2
     - prodict==0.8.18
